force-app/main/default/objects/Golden_Case__c/Golden_Case__c.object-meta.xml
<CustomObject>
    <description>A curated golden test case. Master-detail child of Fleet_Agent__c.</description>
    <label>Golden Case</label>
    <nameField>
        <displayFormat>GC-{000000}</displayFormat>
        <label>Golden Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Golden Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>