force-app/main/default/objects/Golden_Case__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>When true, this case is included in calibration runs.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>