force-app/main/default/objects/Golden_Case__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <description>User who approved this golden case into the active set.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Golden Cases Approved</relationshipLabel>
    <relationshipName>Golden_Cases_Approved</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>