force-app/main/default/objects/Golden_Case__c/fields/Baseline_Centroid_Ref__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Centroid_Ref__c</fullName>
    <label>Baseline Centroid Ref</label>
    <description>Reference to the stored embedding centroid used by the semantic prefilter.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>