force-app/main/default/objects/Golden_Case__c/fields/Baseline_Version__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Version__c</fullName>
    <label>Baseline Version</label>
    <description>Agent version whose blessed run established this case's baseline centroid.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>