force-app/main/default/objects/Golden_Case__c/fields/Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Case_Key__c</fullName>
    <label>Case Key</label>
    <description>Stable external identifier for this golden case, unique across the org.</description>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>