force-app/main/default/objects/Golden_Case__c/fields/Consecutive_Failures__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Failures__c</fullName>
    <label>Consecutive Failures</label>
    <description>Count of consecutive runs in which this case failed.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>