force-app/main/default/objects/Golden_Case__c/fields/Exemplar_Count__c.field-meta.xml
<CustomField>
    <fullName>Exemplar_Count__c</fullName>
    <label>Exemplar Count</label>
    <description>Number of exemplar responses averaged into the baseline centroid.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>