force-app/main/default/objects/Golden_Case__c/fields/Fleet_Agent__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Agent__c</fullName>
    <label>Fleet Agent</label>
    <description>The agent this golden case belongs to.</description>
    <type>MasterDetail</type>
    <referenceTo>Fleet_Agent__c</referenceTo>
    <relationshipLabel>Golden Cases</relationshipLabel>
    <relationshipName>Golden_Cases</relationshipName>
</CustomField>