force-app/main/default/objects/Golden_Case__c/fields/Last_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Result__c</fullName>
    <label>Last Result</label>
    <description>Outcome of this case in the most recent calibration run.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not_Run</fullName>
                <default>true</default>
                <label>Not Run</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>