force-app/main/default/objects/Golden_Case__c/fields/Proposed_At__c.field-meta.xml
<CustomField>
    <fullName>Proposed_At__c</fullName>
    <label>Proposed At</label>
    <description>Timestamp the case was auto-proposed or promoted, pending approval.</description>
    <type>DateTime</type>
</CustomField>