force-app/main/default/objects/Golden_Case__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>How this golden case originated.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Curated</fullName>
                <default>true</default>
                <label>Curated</label>
            </value>
            <value>
                <fullName>Auto_Proposed</fullName>
                <label>Auto Proposed</label>
            </value>
            <value>
                <fullName>Promoted_From_Production</fullName>
                <label>Promoted From Production</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>