force-app/main/default/objects/Golden_Case__c/fields/Utterance__c.field-meta.xml
<CustomField>
    <fullName>Utterance__c</fullName>
    <label>Utterance</label>
    <description>The input utterance sent to the agent for this case. Transcript-sensitive; readable only with Fleet_View_Transcripts.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>