force-app/main/default/objects/Golden_Case__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <description>Relative weight of this case in the agent's aggregate trueness score.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>1</defaultValue>
</CustomField>